make temp lesson API for consistent testing
